[LFC][IFC] Empty bidi inline boxes should not make the line taller https://bugs.webkit.org/show_bug.cgi?id=234621

Reviewed by Antti Koivisto.

We perform the same check for non-bidi inline boxes (also see FIXME).

* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):



Canonical link: https://commits.webkit.org/245534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287394 268f45cc-cd09-0410-ab3c-d52691b4dbfc